[gd_scene load_steps=27 format=2]

[ext_resource path="res://new sprites.png" type="Texture" id=1]
[ext_resource path="res://NPC.gd" type="Script" id=2]
[ext_resource path="res://FFFFORWA.TTF" type="DynamicFontData" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 208, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 336, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 352, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 368, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 176, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 272, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 304, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "3",
"speed": 8.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "5",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "4",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "2",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 4.03182, 8.01036 )

[sub_resource type="DynamicFont" id=23]
font_data = ExtResource( 3 )

[node name="NPC" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 21 )
animation = "5"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.0633736, -0.286085 )
shape = SubResource( 22 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
autostart = true

[node name="Label" type="Label" parent="."]
margin_left = -4.25695
margin_top = -13.9776
margin_right = 25.7431
margin_bottom = 8.02236
rect_scale = Vector2( 0.3, 0.3 )
custom_fonts/font = SubResource( 23 )
text = "00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="." to="." method="_on_Node2D_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_NPC_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
